[package]
name = "classes"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["web", "DOM", "classnames", "macro"]
readme = "README.md"
repository = "https://github.com/sparten11740/classes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
